--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -37,7 +37,7 @@
       <a href="https://www.linkedin.com/in/bhoomika-agarwal/" ><i class="fab fa-linkedin"></i></a>
       <a href="https://github.com/bhoom10"><i class="fab fa-github-square"></i></a>
       <a href="mailto:bhoomika10@gmail.com"><i class="fas fa-envelope"></i></a>
-      <a href="https://scholar.google.nl/citations?user=K3ttv8gAAAAJ"><i class="fab fa-google-scholar"></i></a>
+      <a href="https://orcid.org/0000-0002-7347-8465"><i class="fab fa-orcid"></i></a>
     </h1>
     <!-- <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p> -->
     <p>♡{{ site.time | date: '%Y' }} Copying is an act of love. Please copy. </p>
