Minor link updates
Goodreads shelf and Google scholar profile links added

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -38,6 +38,7 @@
       <a href="https://github.com/bhoom10"><i class="fab fa-github-square"></i></a>
       <a href="mailto:bhoomika10@gmail.com"><i class="fas fa-envelope"></i></a>
       <a href="https://orcid.org/0000-0002-7347-8465"><i class="fab fa-orcid"></i></a>
+      <a href="https://www.goodreads.com/review/list/81998950"><i class="fab fa-goodreads"></i></a>
     </h1>
     <!-- <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p> -->
     <p>♡{{ site.time | date: '%Y' }} Copying is an act of love. Please copy. </p>
